# joystick_rsu

./: CMakeLists.txt  README.md  package.xml
launch/: display_rsu_2dof.launch.py  joystick_node.launch.py  tf_validator.launch.py
robot_model/: rsu_2dof.urdf
robot_model/meshes/: ankle_1.stl  base_link.stl  dummy_crank_1.stl  dummy_foot_1.stl  point_c1_1.stl  point_c2_1.stl  point_u1_1.stl  point_u2_1.stl  upper_crank_1.stl
scripts/: joy_joint_state_node.py  test_rsu_solver.py  tf_rsu_param_validator.py
scripts/util/: gamepad_reader.py  rsu_solver.py
src/: rsu_link_plotter_node.cpp
